# ai-job-scraper

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ADR_INTEGRATION_VALIDATION_REPORT.md  AGENTS.md  COMPREHENSIVE_TEST_SUITE_COMPLETION_REPORT.md  Dockerfile  JOBSPY_TEST_VALIDATION_REPORT.md  MIGRATION-DOCUMENTATION-READY.md  MIGRATION-LOG.md  MIGRATION-STATUS.md  MIGRATION-VALIDATION-FRAMEWORK.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPROVEMENTS_SUMMARY.md  README.md  SPEC-003_REQUIREMENTS_COVERAGE_VALIDATION_REPORT.md  TODO_v2.md  URL_STATE_IMPLEMENTATION.md  VALIDATION_INFRASTRUCTURE_REPORT.md  __init__.py  app.py  check_db.py  config.py  current-codebase.md  database.py  docker-compose.yml  library-opportunities.md  models.py  pyproject.toml  pytest.ini  scraper.py  scraper_firecrawl.py  scraper_hybrid.py  scraper_optimized.py  seed.py  seed_simplified.py  test_database_optimizations.py  test_performance_optimization.py  (+2 more)
.github/: dependabot.yml
.github/workflows/: quality.yml  tests.yml
.streamlit/: config.toml
alembic/: README.md  env.py
alembic/versions/: 8f4b2c91a3d7_saved_searches_and_company_facets.py  c91e7a4d2b6f_import_legacy_costs_and_repair_salary.py  d555e0170c65_initial_migration_create_tables.py
config/: litellm.yaml
docs/: ARCHITECTURE_ASSESSMENT_2.0.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_BLUEPRINT.md  OPERATIONS_MANUAL.md  PERFORMANCE_BENCHMARKS.md  PHASE2_ADR_GAP_ANALYSIS.md  PLANNING-FILEMAP.md  PRD.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  REFINED_CONSOLIDATION_STRATEGY.md  SCRAPING_PAGE_INTEGRATION.md  TECHNICAL_ARCHITECTURE.md  TODO.md  VLLM_DEPLOYMENT.md  overview.md  pr-t5-review-decisions.md  test-maintenance.md
docs/adrs/: 001-scraping-and-extraction-framework.md  002-relevance-filtering.md  003-persistence-and-data-management.md  004-user-interface-framework.md  005-ui-enhancements-and-features.md  006-error-handling-and-logging.md  007-dockerization-and-deployment.md  008-library-management-and-dependencies.md  009-pydantic-integration-for-validation.md  010-testing-and-quality-assurance.md  011-performance-optimization-and-caching.md  ADR-001-library-first-architecture.md  ADR-002-minimal-implementation-guide.md  ADR-003-intelligent-features-architecture.md  ADR-004-local-ai-integration.md  ADR-005-inference-stack.md  ADR-006-hybrid-strategy.md  ADR-006-simple-data-management.md  ADR-007-structured-output-strategy.md  ADR-008-optimized-token-thresholds.md  ADR-008-smart-database-synchronization-engine.md  ADR-009-llm-selection-and-integration-strategy.md  ADR-009-llm-selection-strategy.md  ADR-010-scraping-strategy.md  ADR-011-proxy-anti-bot-integration-2025.md  ADR-012-background-task-management-streamlit.md  ADR-012-optimized-token-thresholds.md  ADR-012-reflex-ui-framework.md  ADR-013-scraping-strategy.md  ADR-013-smart-database-synchronization-engine.md  ADR-013-state-management-architecture.md  ADR-014-hybrid-scraping-strategy.md  ADR-015-component-library-selection.md  ADR-016-routing-navigation-design.md  ADR-017-background-task-management-streamlit.md  ADR-017-local-development-architecture.md  ADR-018-library-first-search-architecture.md  ADR-018-local-database-setup.md  ADR-018a-database-schema-design.md  ADR-018b-database-implementation-strategy.md  (+30 more)
docs/api/: api-reference.md
docs/developers/: api-reference.md  architecture-overview.md  deployment.md  developer-guide.md  library-opportunities.md  litellm-phase1-implementation.md  scraping-integration.md
docs/implementation-guides/: ai-quality-testing.md  local-ai-setup.md
docs/migration/: README.md
docs/planning/: 02-technical-architecture.md  04-ui-implementation-plan.md  06-development-roadmap.md  07-next-steps.md  08-parallel-agent-batch-prompts.md  09-library-first-optimization-plan.md
docs/testing/: coverage-strategy.md
docs/user/: getting-started.md  troubleshooting.md  ui-requirements.md  user-guide.md
examples/: README.md  hybrid_ai_demo.py  native_progress_demo.py  phase3d_coordination_demo.py  search_integration_example.py  unified_scraper_example.py
planning/: 01-executive-summary.md  03-database-optimization.md
reports/adrs/: 01-ai-job-scraper-library-first-ai-research-architect.md
scripts/: app.py  import_fixer.py  monitor_vllm.py  replace_accessors.py  run_fragment_elimination_tests.py  run_performance_validation.py  scraper.py  seed.py  test_ai_integration.py  test_performance.py  test_vllm_integration.py  validate_caching_system.py  validate_session_state_reduction.py  validate_vllm.py
src/: __init__.py  ai_client.py  app.py  app_cli.py  config.py  constants.py  core_utils.py  data_cleaning.py  database.py  database_models.py  main.py  models.py  optimized_salary_parser.py  schemas.py  scraper.py  scraper_company_pages.py  scraper_job_boards.py  seed.py  utils.py
src/ai/: __init__.py  background_ai_processor.py  cloud_ai_service.py  hybrid_ai_router.py  local_vllm_service.py  structured_output_processor.py  task_complexity_analyzer.py
src/coordination/: __init__.py  background_task_manager.py  progress_tracker.py  service_orchestrator.py  system_health_monitor.py
src/database_listeners/: __init__.py  monitoring_listeners.py  pragma_listeners.py
src/database_optimization/: README.md  __init__.py  add_performance_indexes.py  performance_monitor.py
src/db/: migrations.py
src/models/: __init__.py  job_models.py
src/scraping/: job_scraper.py  scrape_all.py
src/services/: __init__.py  analytics_service.py  base_service.py  cache_manager.py  company_service.py  cost_monitor.py  database_sync.py  job_service.py  (+3 more)
tests/: conftest.py  factories.py  test_config.py  test_constants.py  test_database.py  test_jobspy_fixtures_usage.py  test_main_navigation.py  test_migration_startup.py  test_migrations.py  test_models.py  test_pagination.py  test_performance_optimization.py  test_proxy_integration.py  test_proxy_integration_comprehensive.py  test_scraper.py  test_scraper_company_pages.py  test_scrapers.py  test_seed.py  test_utils.py
utils/: __init__.py  css_loader.py  css_utils.py
(+302 files in other folders)
