[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-job-scraper"
version = "0.1.0"
description = "Local-first job collection and application tracker"
authors = [{ name = "Bjorn Melin" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["job-tracker", "job-scraper", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Data processing
    "pandas>=2.3.3,<3.0.0",
    # Web and scraping
    "python-jobspy>=1.1.82,<2.0.0",
    # Database
    "sqlmodel>=0.0.39,<1.0.0",
    "alembic>=1.18.5,<2.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    # UI and CLI
    "streamlit>=1.59.2,<2.0.0",
    "typer>=0.27.0,<1.0.0",
    # Utilities
    "humanize>=4.16.0,<5.0.0",
    "price-parser>=0.5.0,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "sqlalchemy>=2.0.51,<3.0.0",
]

[project.urls]
Repository = "https://github.com/BjornMelin/ai-job-scraper"

[project.scripts]
ai-job-scraper = "src.app_cli:app"
ai-job-seed = "src.seed:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
python-downloads = "automatic"
python-preference = "managed"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3,<4.0.0",
    "faker>=40.32.0,<41.0.0",
    "polyfactory>=3.3.0,<4.0.0",
    "pre-commit>=4.6.0,<5.0.0",
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "ruff>=0.15.22,<1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E203", "E501",  # Line length handled by formatter
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",                      # Show all test results summary
    "--strict-markers",         # Ensure all markers are defined
    "--tb=short",               # Short traceback format
]
markers = [
    "unit: Fast isolated tests",
    "integration: Multi-component tests",
    "asyncio: Async test support",
]
